# src/modules/users/dtos/authenticate-users-response.dto.ts
@@ -1,3 +1,4 @@
 export default interface AuthenticateUsersResponseDto {
-  token: string;
+  accessToken: string;
+  refreshToken: string;
 }
