# src/modules/users/dtos/create-user-tokens.dto.ts
@@ -1,0 +1,4 @@
+export default interface CreateUserTokensDto {
+  userId: string;
+  refreshToken: string;
+}
